Fix for scrollbar color / clipping UI issue.

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -92,7 +92,7 @@ body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvet
 
   &::-webkit-scrollbar {
     width: 14px;
-    background-color: #f4e7e7;
+    background-color: #d42c08;
 
     &:horizontal {
       height: 14px;
